--- a/Home.css
+++ b/Home.css
@@ -3,6 +3,15 @@
     src: url(Fonts/DigestiveTwo.otf);
 }
 
+@keyframes background {
+    0% {background-image: url(images/background/1.svg);}
+    20% {background-image: url(images/background/2.svg);}
+    40% {background-image: url(images/background/3.svg);}
+    60% {background-image: url(images/background/4.svg);}
+    80% {background-image: url(images/background/5.svg);}
+    100% {background-image: url(images/background/6.svg);}
+}
+
 html, body {
     margin: 0; 
     height: 100%; 
@@ -19,11 +28,15 @@ body {
     width: 100vw;
     max-width: 1600px;
     height: 100vw;
-    background-image: url(images/logo-main.svg);
+    /* background-image: url(images/background/1.svg); */
     background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
     position: relative;
+    animation-name: background;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps(1);
     
 }
 
