--- a/Home.css
+++ b/Home.css
@@ -28,15 +28,11 @@ body {
     width: 100vw;
     max-width: 1600px;
     height: 100vw;
-    /* background-image: url(images/background/1.svg); */
     background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
     position: relative;
-    animation-name: background;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: steps(1);
+    animation: background 3000ms steps(1) infinite;
     
 }
 
