--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ a:hover, a:active {
     left: 10vw;
     width: 300px;
     height: 400px;
-    background-image: url(images/menu/1.JPG);
+    background-image: url(images/menu/1.jpg);
 }
 
 .two::before {
