--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,7 @@
     100% {background-image: url(images/background/R6.svg);}
 }
 
-
-@media only screen and (max-width:300px) {
+@media only screen and (max-width:400px) {
 
     #main-container {
         width: 100%;
@@ -67,14 +66,12 @@
     .nine:hover::before, 
     .ten:hover::before {
         transform: scale(0);
-    }
-
 }
 
 
 
 
-
+}
 
 html, body {
     margin: 0; 
@@ -106,7 +103,7 @@ body {
     height: 70vh;
 }
 
-.issues {
+.issues{
     position: absolute;
     top: 20vw;
     margin-left: 1rem;
@@ -252,3 +249,58 @@ a:hover, a:active {
 }
 
 
+
+
+
+
+/*         MEDIA QUERY       */
+
+
+
+
+
+@media only screen and (max-width:400px) {
+
+    #main-container {
+        width: 100%;
+        height: 100%;
+        background-position: left;
+        display: flex;
+        animation: R-background 3000ms steps(1) infinite; 
+    }
+
+    .nothing {
+        width: 70%;
+        height: 100%;
+    }
+    
+    .list {
+        width: 20%;
+        height: 100%;
+        flex-direction: column;
+    }
+
+    a, a:visited {
+        padding: 0rem 0rem 0rem 4rem;
+        font-size: 5em;
+        line-height: 4rem;
+    } 
+
+
+    .one:hover::before, 
+    .two:hover::before, 
+    .three:hover::before, 
+    .four:hover::before, 
+    .five:hover::before, 
+    .six:hover::before, 
+    .seven:hover::before, 
+    .eight:hover::before, 
+    .nine:hover::before, 
+    .ten:hover::before {
+        transform: scale(0);
+}
+
+
+
+
+}
